--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,3 +1,36 @@
-<p>
-  landingpage works!
-</p>
+<div class="portfolio">
+  <img src="https://static.comicvine.com/uploads/original/11111/111115170/3445548-4383058771-Avata.jpg">
+  <div class="portfolio-details">
+    <div class="header-portfolio">
+      <p id="hello">Hello</p>
+      <h2>I`m <span class="bold">Vlad Senchuk</span></h2>
+      <p>Trainee Frond-end JS developer </p>
+    </div>
+    <table>
+      <tbody>
+      <tr>
+        <td class="bold">Age:</td>
+        <td>23</td>
+      </tr>
+      <tr>
+        <td class="bold">E-MAIL:</td>
+        <td>veliantos@gmail.com</td>
+      </tr>
+      <tr>
+        <td class="bold">PHONE:</td>
+        <td>+380687063857</td>
+      </tr>
+      <tr>
+        <td class="bold">Studing JS:</td>
+        <td>from 07.04.2017</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="socials">
+    <a href=""><i class="fa fa-facebook"></i></a>
+    <a href=""><i class="fab fa-linkedin"></i></a>
+    <a href=""><i class="fab fa-google-plus-g"></i></a>
+    <a href=""><i class="fab fa-github"></i></a>
+  </div>
+</div>
