--- a/src/app/basecover/basecover.component.css
+++ b/src/app/basecover/basecover.component.css
@@ -1,13 +1,16 @@
 *{
-  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
   color: white;
   text-decoration: none;
 }
+
 ul{
 padding: 0;
 }
 li{
   list-style: none;
+}
+a, span{
+  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 /********************************************************
@@ -52,8 +55,7 @@ img{
   margin-right: 7px;
 }
 .showed-header-btns{
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px 10px 15px 10px;
 }
 .avatar-header-img {
   width: 35px;
@@ -69,12 +71,11 @@ img{
 
 .sidebar{
   background: #222d32;
-  min-height: 100%;
+  min-height: calc(100% - 50px);
   width: 230px;
   overflow: hidden;
   font-size: 14px;
   float: left;
-  height: 100%;
 }
 .user-panel{
   padding: 15px;
@@ -104,6 +105,14 @@ img{
 }
 .sidebar span a, .sidebar span i{
   color: white;
+}
+.text-a{
+  padding-left: 3px;
+  font-size: 12px;
+}
+.user-panel span a i {
+  font-size: 7px;
+  color: lawngreen;
 }
 .search-input{
   display: flex;
@@ -160,4 +169,9 @@ img{
   transition: height .3s ease;
   height: 0;
   overflow: hidden;
+}
+
+.content-block {
+  color: initial;
+  padding: 0 0 0 230px;
 }
