--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,3 +1,13 @@
-<p>
-  loginpage works!
-</p>
+<div class="login-container">
+  <div class="login-form-container">
+    <form
+      #signinForm
+      class="login-form">
+      <h1>Admin page</h1>
+      <h2>Sign in</h2>
+      <input type="email" class="lInput" [(ngModel)]="user.email"  placeholder="Email" name="email">
+      <input type="password" class="lInput" [(ngModel)]="user.password" placeholder="Password" name="password">
+      <button class="submit" (click)="authenticate(user)">Sign In</button>
+    </form>
+  </div>
+</div>
