-fixed API requests -updated about page(not finished) -skills page(maybe will be deleted soon by merge with about page) -completed login page -updated dashboard -updated cvcover

--- a/src/app/cvcover/cvcover.component.html
+++ b/src/app/cvcover/cvcover.component.html
@@ -41,7 +41,14 @@
       </li>
 
       <li>
-        <button class="menu-header-btn"><i class="fas fa-bars"></i></button>
+        <div class="menu-header-btn">
+          <button class="dropbtn"><i class="fas fa-bars"></i></button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
       </li>
     </ul>
   </header>
