--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -18,4 +18,31 @@
     <div class="progress" id="bootstrap-line"><span>15%</span></div>
   </li>
 </ul>
+<!--circle progress-->
+<ul class="circles-ul">
+  <li>
+    <div class="wrapper" data-anim="base wrapper">
+      <div class="circle"  data-anim="base left"></div>
+      <div class="circle" data-anim="base right"></div>
+    </div>
+  </li>
+  <li>
+    <div class="wrapper" data-anim="base wrapper">
+      <div class="circle"  data-anim="base left"></div>
+      <div class="circle" data-anim="base right"></div>
+    </div>
+  </li>
+  <li>
+    <div class="wrapper" data-anim="base wrapper">
+      <div class="circle"  data-anim="base left"></div>
+      <div class="circle" data-anim="base right"></div>
+    </div>
+  </li>
+  <li>
+    <div class="wrapper" data-anim="base wrapper">
+      <div class="circle"  data-anim="base left"></div>
+      <div class="circle" data-anim="base right"></div>
+    </div>
+  </li>
+</ul>
 </div>
