--- a/src/app/cvcover/cvcover.component.css
+++ b/src/app/cvcover/cvcover.component.css
@@ -50,8 +50,9 @@ header ul li a{
 td{
   color: #9190a3;
 }
-.menu-header-btn{
+.menu-header-btn button{
   background: transparent;
+  border: 1px solid #a8a3a3;
 
 }
 .menu-header-btn i{
@@ -60,12 +61,39 @@ td{
 /**************************
   absolute btn settings
 **************************/
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 3px 4px 5px rgba(0,0,0,0.3);
+  border-radius: 3px;
+  z-index: 1;
+  right: 0;
+}
+.menu-header-btn:hover .menu-header-btn{
+  background-color: #3e8e41;
+}
+.dropdown-content a:hover{
+  background-color: #ddd;
+}
+.dropdown-content a{
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.menu-header-btn:hover .dropdown-content {
+  display: block;
+}
 .settings-btn{
   margin-top: 80px  ;
   position: absolute;
   height: 60px;
   width: 60px;
   background: white;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .settings-btn a{
   border: none;
@@ -76,8 +104,6 @@ td{
   padding: 9px;
   color: #374850;
 }
-
-
 /**************************
     content Portfolio
 **************************/
