--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -7,7 +7,7 @@
       <h2>Sign in</h2>
       <input type="email" class="lInput" [(ngModel)]="user.email"  placeholder="Email" name="email">
       <input type="password" class="lInput" [(ngModel)]="user.password" placeholder="Password" name="password">
-      <button class="submit" (click)="authenticate(user)">Sign In</button>
+      <button class="submit" (click)="auth(user)">Sign In</button>
     </form>
   </div>
 </div>
