--- a/src/app/basecover/basecover.component.html
+++ b/src/app/basecover/basecover.component.html
@@ -16,7 +16,14 @@
         <img src="http://cactusthemes.com/blog/wp-content/uploads/2018/01/tt_avatar_small.jpg" class="avatar-header-img">
         <span>User Name</span>
       </a>
-      <a href="#" class="showed-header-btns"><span><i class="fas fa-cogs"></i></span></a>
+      <div class="showed-header-btns">
+        <button class="dropbtn"><i class="fas fa-cogs"></i></button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a (click)=" quit()">Log Out</a>
+        </div>
+      </div>
     </div>
   </div>
                 <!--Header buttons)-->
