--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -58,4 +58,22 @@ tr td button{
 .editCl{
   background: #428bca;
 }
-
+/******pagination******/
+.pagination{
+  float: right;
+  height: 20px;
+margin-top: 5px;
+  margin-right: 20px;
+}
+.pagination input{
+  width: 20px;
+  height: 10px;
+}
+.pagination button{
+  padding: 0 3px 0 3px;
+  border: none;
+  margin-left: 3px;
+  margin-right: 3px;
+  background: none;
+  background: white;
+}
