--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,14 @@ html, body{
   width: 100%;
 }
 /* You can add global styles to this file, and also import other style files */
+.angle-180 {
+  transform: rotate(180deg) !important;
+}
+
+/*****************************************
+               TABLE STYLES
+*****************************************/
+
+.table-box table thead tr th i.fas.fa-arrow-up {
+  transition: all .3s ease;
+}
