--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,26 +2,30 @@
   <!--Table with list from backend-->
   <div class="table-box">
     <div class="search-userlist">
-      <select id="search-type-select" (change)=searhusertag($event.target.value) >
-        <option value="companyName">by Company name</option>
-        <option value="firstName">by First name</option>
-        <option value="email" selected>by email</option>
-        <option value="phoneNumber1">by phone number</option>
+      <select id="search-type-select" (change)=searchUserTag($event.target.value) >
+        <option *ngFor="let searchItem of tableOptions.searchItems" [value]="searchItem.value">by {{searchItem.title}}</option>
       </select>
-      <input type="text" placeholder="Search..." (keyup)="searchfunc($event)">
+      <input type="text" placeholder="Search..." (keyup)="searchUserBy($event.target.value)">
     </div>
-    <table>
+    <h4 *ngIf="!usersList || !usersList.length">No results to show</h4>
+    <table *ngIf="usersList && usersList.length">
       <thead>
-      <tr>
-        <th><input type="checkbox" (click)="check()" [checked]="options.checkedAll"></th>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Company</th>
-        <th>Created</th>
-        <th>Edit</th>
-        <th>Delete</th>
-      </tr>
+        <tr>
+          <th><input type="checkbox" (click)="check()" [checked]="tableOptions.checkedAll"></th>
+          <th
+            *ngFor="let headItem of tableOptions.headerItems"
+            (click)="sortTable(headItem.value)"
+          >
+            {{headItem.title}}
+            <i
+              *ngIf="tableOptions.sortKey === headItem.value"
+              class="fas fa-arrow-up"
+              [ngClass]="{'angle-180':tableOptions.sortDirection === 1}"
+            ></i>
+          </th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
       </thead>
       <tbody>
       <tr *ngFor="let item of usersList">
@@ -34,26 +38,23 @@
         <td class="edit"><button class="editCl" (click)="goToDetails(this.item.id)">
           <i class="fa fa-edit"></i></button></td>
         <td class="delete-column">
-          <button *ngIf="false" class="deleteCl" (click)="deleteUserData(this.item.id)" >
-          <i *ngIf="false" class="fa fa-trash"></i></button></td>
+          <!--<button class="deleteCl" (click)="deleteUserData(this.item.id)" >-->
+          <!--<i class="fa fa-trash"></i></button></td>-->
         </tr>
       </tbody>
     </table>
     <div class="pagination">
-      <select (change)= chooseshowed($event.target.value)>
-        <option value="5">5</option>
-        <option value="10">10</option>
-        <option value="15" selected>15</option>
-        <option value="20">20</option>
+      <select (change)= chooseShowed($event.target.value)>
+        <option *ngFor="let onPage of tableOptions.paginationItemsSelector" [value]="onPage" [selected]="onPage === tableOptions.tableItemsAmount">{{onPage}}</option>
       </select>
       <button (click)="paginate('first')"><<</button>
       <button (click)="paginate(-1)"><</button>
-      <span> {{numpage}} of {{pages}} pages </span>
+      <span> {{tableOptions.activePage}} of {{tableOptions.pages}} pages </span>
       <button (click)="paginate(1)">></button>
       <button (click)="paginate('last')">>></button>
     </div>
     <button id="createU" (click)="createUser()">Create User</button>
-    <button id="delU" >Delete Marked Users</button>
+    <button id="delU">Delete Marked Users</button>
   </div>
   <!--End of Table with list from backend-->
 </div>
