--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -57,7 +57,7 @@
               <!--Navigation List-->
   <ul class="sidebar-nav-ul">
     <li class="head-li">Main Navigation</li>
-    <li *ngFor="let menuItem of menuItems">
+    <li class="sidebar--category" *ngFor="let menuItem of menuItems">
       <span class="showed" (click)="menuClicked(menuItem)"><span><i class="{{menuItem.icon}}"></i>{{menuItem.title}}</span></span>
       <ul [ngStyle]="{'height': menuItem.opened ? 30 * menuItem.innerItems.length + 'px' : 0}" class="menu-children-container">
         <li *ngFor="let listChildren of menuItem.innerItems" (click)="menuChildClicked(listChildren)">
