--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -150,6 +150,7 @@ img{
   background: #1e282c;
   padding-top: 10px;
   padding-bottom: 10px;
+  cursor: pointer;
 }
 .showed span{
   display: inline-flex;
