--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,8 +1,7 @@
-.dash-container {
+.dash-container{
   padding: 10px;
 }
-
-.table-box {
+.table-box{
   border: 3px solid lightgrey;
   display: inline-block;
   border-radius: 7px;
@@ -10,8 +9,7 @@
   background: white;
   width: 800px;
 }
-
-table {
+table{
   margin: 10px;
   border: 1px solid grey;
   border-collapse: collapse;
@@ -25,56 +23,45 @@ button {
   cursor: pointer;
 }
 
-thead {
+thead{
   padding: 0;
 }
-
 tr {
-  border: 1px solid black;
+  border: 1px solid black ;
   text-align: center;
   padding: 2px;
 }
-
-th {
-  border: 1px solid black;
+th{
+  border: 1px solid black ;
   text-align: center;
 }
-
 tr:nth-child(even) {
   background-color: #dddddd;
 }
-
-tr td {
+tr td{
   border: 1px solid lightgrey;
   padding: 3px 3px 3px 12px;
 }
-
-.checkbox, .edit, .delete-column {
+.checkbox, .edit, .delete-column{
   padding: 3px !important;
 }
-
-.id-td {
+.id-td{
   padding: 0 3px 0 3px !important;
   text-align: center;
 }
-
-.created-id {
+.created-id{
   width: 165px;
 }
-
-.name-collumn {
+.name-collumn{
   min-width: 115px;
 }
-
-.email-column {
-  min-width: 115px;
+.email-column{
+  min-width: 115px;;
 }
-
-.company-column {
+.company-column{
   min-width: 100px;
 }
-
-tr td button {
+tr td button{
   height: 24px;
   width: 23px;
   border: none;
@@ -83,42 +70,35 @@ tr td button {
   padding: 4px;
   font-size: 17px;
 }
-
-#createU, #delU, #mU {
-  margin: 0 0 10px 10px;
+#createU, #delU, #mU{
+  margin: 0 0 10px  10px ;
   border: none;
   border-radius: 4px;
   color: white;
   height: 25px;
   padding: 0 4px 0 4px;
 }
-
-#createU {
+#createU{
   background: cornflowerblue;
 }
-
-#delU, .deleteCl {
+#delU, .deleteCl{
   background: red;
 }
-
-.editCl {
+.editCl{
   background: #428bca;
 }
-
 /******pagination******/
-.pagination {
+.pagination{
   float: right;
   height: 20px;
-  margin-top: 5px;
+margin-top: 5px;
   margin-right: 20px;
 }
-
-.pagination input {
+.pagination input{
   width: 20px;
   height: 10px;
 }
-
-.pagination button {
+.pagination button{
   padding: 0 3px 0 3px;
   border: none;
   margin-left: 3px;
@@ -127,35 +107,30 @@ tr td button {
   background: white;
   transition: 0.2s;
   border-radius: 3px;
-}
-.pagination button:hover {
-  background: gray;
-  color: white;
+  &:hover {
+    background: gray;
+    color: white;
+  }
 }
 
 /*st*/
-.search-userlist {
+.search-userlist{
   float: left;
   margin: 5px 10px 5px 10px;
 }
-
 .search-userlist * {
   border: 1px solid gray;
 }
-
 .search-userlist input {
   padding-left: 4px;
 }
 
 /**/
-th i.fas {
+th i.fas{
   font-size: 70%;
   /*display: none;*/
-  transition: all 0.3s ease;
+  transition: all .3s ease;
 }
-
 /*th:active i {*/
-/*display: inline;*/
+  /*display: inline;*/
 /*}*/
-
-/*# sourceMappingURL=dashboard.component.css.map */
